# dataset_cha_fp2024_2005-2023

./: .gitignore  README.md  pyproject.toml
.obsidian/: workspace.json
01_winddir_from_Level-0/: main.py
02_checking_level-0_output/: 1_L0_merge_output_to_parquet.py
02_checking_level-0_output_CH-OE2/: 1_L0_merge_output_to_parquet.py  2_L0_timelags_check.py  main.py
10_METEO/11_meteoscreening_2021-2023/: LW_IN_T1_2_1_2021-2023.ipynb  RH_T1_2_1_2021-2023.ipynb  SWC_GF1_0.05_1_2021-2023.ipynb  SWC_GF1_0.2_1_2021-2023.ipynb  SWC_GF1_0.5_1_2021-2023.ipynb  SW_IN_T1_2_1_2021-2023.ipynb  TS_GF1_0.025_2_2021-2023.ipynb  TS_GF1_0.04_1_2021-2023.ipynb  TS_GF1_0.05_1_2021-2023.ipynb  TS_GF1_0.15_1_2021-2023.ipynb  TS_GF1_0.2_1_2021-2023.ipynb  TS_GF1_0.4_1_2021-2023.ipynb  TS_LOWRES_GF1_0.4_3_2021-2024.09.ipynb  TS_LOWRES_GF1_0.5_3_2021-2024.09.ipynb  TS_LOWRES_GF1_0.75_3_2021-2024.09.ipynb  TS_LOWRES_GF1_1_3_2021-2024.09.ipynb
10_METEO/12_merge_meteo6_for_eddypro_calcs_2005-2023/: 12.1_DownloadMeteo_2005-2023_FLUXNET_diive_for_eddypro.ipynb
10_METEO/13_merge_meteo_for_analyses_2005-2023/: 13.0_DownloadMeteo20_2005-2020_FEIGENW.ipynb
30_FLUXES_L1_IRGA_FluxProcessingChain/: 31.0_MergeResults_L1_QCL+LGR.ipynb
40_FLUXES_L1_IRGA+QCL+LGR_mergeData/: 41.0_mergeData.ipynb
docs/: Data sources.md  Data_Sources.md  Flux calculations.md  Flux post-processing.md  Flux_Calculations.md  Flux_Post-processing.md  Links.md  Lists.md  Management_Data.md  Meteo_Data.md  README.md  References.md  Tables.md
notebooks/: README.md
notebooks/00_L0_checks/: 02_L0_timelags_check.ipynb  (+2 more)
(+208 files in other folders)
